# anima

./: .gitignore  CMakeLists.txt  README.md
config/: persona.json
include/: LlmClient.h  Mood.h  Persona.h  Turn.h  WorkingMemory.h
src/: LlmClient.cpp  Mood.cpp  Persona.cpp  WorkingMemory.cpp  main.cpp
